feat(admin-category): coding module admin - category - coding module category - write doc block module User, Category of admin
BREAKING CHANGES:clean, refactor code
- module User, Category of admin(Controller, Service, Repository)
- Base code not yet refactor
