# app/Models/Category.php
@@ -1,0 +1,42 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Foundation\Auth\User as Authenticatable;
+use Illuminate\Notifications\Notifiable;
+use Laravel\Passport\HasApiTokens;
+use Laravel\Scout\Searchable;
+use Illuminate\Database\Eloquent\SoftDeletes;
+use Illuminate\Database\Eloquent\Model;
+
+class Category extends Model
+{
+    use SoftDeletes;
+
+    /**
+     * The attributes that are mass assignable.
+     *
+     * @var array<int, string>
+     */
+    protected $fillable = [
+        'name',
+        'parent_id',
+        'slug',
+    ];
+
+    public function parent()
+    {
+        return $this->belongsTo(Category::class, 'parent_id')->withTrashed();
+    }
+
+    public function children()
+    {
+        return $this->hasMany(Category::class, 'parent_id')->withTrashed();
+    }
+
+    public function hasChildren()
+    {
+        return $this->children()->exists();
+    }
+}
